examples/test/testpolicy2446.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2446
  namespace: namespace298
spec:
  podSelector:
    matchLabels:
      key26: value12
      key2: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value10
          key44: value9
      podSelector:
        matchLabels:
          key26: value25
          key40: value25
          key25: value17
